[tool.poetry]
name = "tortoise-tts"
version = "0.1.0"
description = ""
authors = ["Yuri Sims <yuriosim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
appdirs = "^1.4.4"
einops = "^0.6.1"
ffmpeg = "^1.4"
inflect = "^6.0.4"
librosa = "^0.10.0.post2"
llvmlite = "^0.40.0"
notebook = "^6.5.4"
numba = "^0.57.0"
numpy = "^1.24.3"
progressbar = "^2.5"
rotary-embedding-torch = "^0.2.3"
scipy = "^1.10.1"
threadpoolctl = "^3.1.0"
tokenizers = "^0.13.3"
torchaudio = "^2.0.2"
tqdm = "^4.65.0"
transformers = "^4.29.2"
unidecode = "^1.3.6"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
coverage = "^7.2.5"
ipykernel = "^6.23.0"
jupyter = "^1.0.0"
pytest = "^7.3.1"
ruff = "^0.0.265"
safety = "^2.3.5"

[tool.poetry.group.pytorch-workaround.dependencies]
nvidia-cublas-cu11 = { version = "11.10.3.66", platform = 'linux' }
nvidia-cuda-cupti-cu11 = { version = "11.7.101", platform = 'linux' }
nvidia-cuda-nvrtc-cu11 = { version = "11.7.99", platform = 'linux' }
nvidia-cuda-runtime-cu11 = { version = "11.7.99", platform = 'linux' }
nvidia-cudnn-cu11 = { version = "8.5.0.96", platform = 'linux' }
nvidia-cufft-cu11 = { version = "10.9.0.58", platform = 'linux' }
nvidia-curand-cu11 = { version = "10.2.10.91", platform = 'linux' }
nvidia-cusolver-cu11 = { version = "11.4.0.1", platform = 'linux' }
nvidia-cusparse-cu11 = { version = "11.7.4.91", platform = 'linux' }
nvidia-nccl-cu11 = { version = "2.14.3", platform = 'linux' }
nvidia-nvtx-cu11 = { version = "11.7.91", platform = 'linux' }
triton = { version = "2.0.0", platform = 'linux' }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
